# ffstudios-chat-bot

./: .env.example  .gitignore  README.md  demo_enhanced_phrases.py  demo_multi_ingredient_integration.py  demo_typo_correction.py  inventory_service.py  latest_logs.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_inventory_phrases.py  test_multi_ingredients.py  test_spanish.py  test_typo_correction.py
docs/: CONVERSATION_FLOW.md  README.md
examples/: README.md  demo_conversation_flow.py  demo_finance.py
scripts/: init_db.py  run_bot.py  seed_data.sql  seed_db.py  test_analytics.py  view_logs.py
src/: __init__.py
src/bot/: __init__.py  config.py  conversation_state.py  handlers.py
src/database/: __init__.py  databaseschema.pgsql  db.py  models.py
src/services/: __init__.py  data_analyst_service.py  finance_service.py  fuzzy_matcher.py  inventory_service.py  nlp_service.py  smart_inventory_service.py
tests/: README.md  conftest.py  test_conversation_flow.py  test_finance_flow.py
